[gd_scene load_steps=5 format=2]

[ext_resource path="res://infrastructure/objects/Ladder.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.556863, 0.686275, 0.235294, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 1, 0.05 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 0.1, 0.2 )

[node name="LadderDemo" type="RigidBody"]
collision_layer = 6
collision_mask = 2147483653
mode = 1
script = ExtResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
width = 1.0
depth = 0.1
material = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="TopSupport" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, 0.25 )
shape = SubResource( 3 )
disabled = true

[node name="BottomReference" type="Spatial" parent="."]

[node name="BottomAttachmentPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.38 )

[node name="TopReference" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="TopAttachmentPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.38 )
